feat: add chinese support.

--- a/demo.tex
+++ b/demo.tex
@@ -24,6 +24,15 @@
 \usepackage{xspace}
 \newcommand{\themename}{\textbf{\textsc{metropolis}}\xspace}
 
+%%%%%%%%%%%%%%%% set the language %%%%%%%%%%%%%%%%
+\newcommand{\setlangcn}{%
+  \usepackage{ctex}
+}
+\newcommand{\setlangen}{}
+
+\setlangen
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \title{Metropolis}
 \subtitle{A modern beamer theme}
 \date{\today}
